<resources>
    <string name="app_name">Word Volley</string>
    <string name="turn_time">0</string>
    <string name="overall_time">0</string>
    <string name="prev_word">-</string>
    <string name="time_label">Turn Time: </string>
    <string name="word_title">Previous Word:</string>
    <string name="overall_time_label">Overall Time:</string>
    <string name="multiplayer_mode">Multiplayer\nMode</string>
    <string name="computer_mode">Computer\nMode</string>
    <string name="input_hint">Enter a word</string>
    <string name="start_button_text">Start</string>
    <string name="reset_button">Reset</string>
    <string name="quit_button">Quit</string>
    <string name="submit_button">Submit</string>
    <string name="score_one_label">Player One Score:</string>
    <string name="score_two_label">Player Two Score:</string>
    <string name="fragment_label">Starting Fragment:</string>
    <string name="score_two">0</string>
    <string name="score_one">0</string>
    <string name="fragment">-</string>
    <string name="signin_other_error">There was an issue Sign-in please try again</string>
</resources>
